# ALPHA-FUTURES-BOT

./: .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml
data/: sample_btc_candles.csv
data/history/: .gitkeep  README.md
src/alpha_futures_bot/: __init__.py  broker.py  config.py  data.py  historical_validation.py  indicators.py  logging_service.py  models.py  position.py  presets.py  regime.py  reporting.py  risk.py  runner.py  strategy.py
tests/: conftest.py  test_broker.py  test_comparison_reporting.py  test_config_safety.py  test_data.py  test_historical_data.py  test_historical_validation.py  test_indicators.py  test_logging_service.py  test_position.py  test_preset_comparison.py  test_presets.py  test_regime.py  test_reporting.py  test_risk.py  test_runner.py  test_strategy.py
